Add a few extra tests for throttling corner cases

While investigating crbug.com/620857 I noticed we were lacking
tests for some corner cases of throttling and timer suspension.

BUG=620857

Review-Url: https://codereview.chromium.org/2081663002
Cr-Commit-Position: refs/heads/master@{#401618}

Former-commit-id: 26c1102c976aeb0ae91bed0d3f7f7abd92a41e20